--- a/app/src/main/res/layout/activity_preview_image.xml
+++ b/app/src/main/res/layout/activity_preview_image.xml
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/confirmImageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
