--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
+    <item android:drawable="@color/white" />
     <item>
-        <bitmap android:src="@drawable/logo"
-            android:gravity="center" />
+        <bitmap
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:src="@drawable/logo" />
     </item>
-</selector>
+</layer-list>
