--- a/app/src/main/res/layout/activity_select_theme.xml
+++ b/app/src/main/res/layout/activity_select_theme.xml
@@ -45,5 +45,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="edges2handbags" />
+
+        <RadioButton
+            android:id="@+id/radioEdges2Bracelets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="edges2bracelets" />
     </RadioGroup>
 </android.support.constraint.ConstraintLayout>
