--- a/app/src/main/res/layout/activity_select_theme.xml
+++ b/app/src/main/res/layout/activity_select_theme.xml
@@ -52,5 +52,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="edges2bracelets" />
+
+        <RadioButton
+            android:id="@+id/radioEdges2Dresses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="edges2dresses" />
     </RadioGroup>
 </android.support.constraint.ConstraintLayout>
