--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
-    <item android:drawable="@color/wavePrimaryLt" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <bitmap
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:src="@drawable/logo" />
+        <shape>
+            <gradient
+                android:angle="45"
+                android:startColor="#9796f0"
+                android:endColor="#fbc7d4"
+                android:type="linear" />
+        </shape>
     </item>
-</layer-list>
+</selector>
