--- a/app/src/main/res/layout/activity_display_image.xml
+++ b/app/src/main/res/layout/activity_display_image.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DisplayImageActivity"
-    android:background="@color/wavePrimaryLt">
+    android:background="@drawable/background">
 
     <LinearLayout
         android:layout_width="match_parent"
