--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,40 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/wavePrimaryLt"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center_vertical"
+        android:orientation="vertical"
         android:weightSum="10">
 
         <Button
             android:id="@+id/letsGo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginLeft="75dp"
+            android:layout_marginRight="75dp"
             android:layout_marginTop="5dp"
+            android:layout_weight="1"
             android:background="@color/wavePrimary"
             android:text="Let's go!"
             android:textColor="@color/waveTextWh"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/uploadImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginLeft="75dp"
+            android:layout_marginRight="75dp"
             android:layout_marginTop="5dp"
+            android:layout_weight="1"
             android:background="@color/wavePrimary"
             android:text="@string/upload_image"
             android:textColor="@color/waveTextWh"
@@ -48,11 +48,11 @@
             android:id="@+id/hintToggle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginLeft="75dp"
+            android:layout_marginRight="75dp"
             android:layout_marginTop="5dp"
+            android:layout_weight="1"
             android:background="@color/wavePrimary"
             android:text="@string/how_it_works"
             android:textColor="@color/waveTextWh"
@@ -63,12 +63,12 @@
             android:id="@+id/hintText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:layout_marginBottom="10dp"
-            android:orientation="vertical"
+            android:animateLayoutChanges="true"
             android:background="@color/waveTextWh"
-            android:animateLayoutChanges="true">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
