Fix rotation on non samsung + watches model

--- a/app/src/main/res/layout/activity_select_theme.xml
+++ b/app/src/main/res/layout/activity_select_theme.xml
@@ -58,5 +58,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="edges2dresses" />
+
+        <RadioButton
+            android:id="@+id/radioEdges2Watches"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="edges2watches" />
     </RadioGroup>
 </android.support.constraint.ConstraintLayout>
