--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -12,10 +12,20 @@
         android:layout_height="match_parent"/>
 
     <Button
-        android:id="@+id/btn_takepicture"
+        android:id="@+id/btn_take_picture"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="20dp"
         android:background="@drawable/camera_button" />
+
+    <Button
+        android:id="@+id/btn_upload_image"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="right|bottom"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/upload_button" />
+
 </FrameLayout>
