Added appropriate buttons, fixed progress bar error upon closing activity

--- a/app/src/main/res/drawable/check_button.xml
+++ b/app/src/main/res/drawable/check_button.xml
@@ -3,14 +3,14 @@
     <item>
         <shape android:shape="oval">
             <stroke android:color="@color/white" android:width="3dp" />
-            <solid android:color="@color/black_overlay" />
+            <solid android:color="@color/green_overlay" />
             <size android:width="100dp" android:height="100dp" />
         </shape>
     </item>
     <item
-        android:drawable="@drawable/camera_icon"
+        android:drawable="@drawable/check_icon"
         android:width="50dp"
         android:height="50dp"
         android:gravity="center"
-    />
+        />
 </layer-list>
