--- a/app/src/main/res/drawable/upload_button.xml
+++ b/app/src/main/res/drawable/upload_button.xml
@@ -4,14 +4,14 @@
         <shape android:shape="rectangle">
             <stroke android:color="@color/white" android:width="3dp" />
             <solid android:color="@color/black_overlay" />
-            <size android:width="50dp" android:height="50dp" />
+            <size android:width="60dp" android:height="60dp" />
             <corners android:radius="10dp" />
         </shape>
     </item>
     <item
-        android:drawable="@drawable/upload_logo"
-        android:width="30dp"
-        android:height="30dp"
+        android:drawable="@drawable/upload_icon"
+        android:width="40dp"
+        android:height="40dp"
         android:gravity="center"
         />
 </layer-list>
