--- a/app/src/main/res/layout/activity_preview_image.xml
+++ b/app/src/main/res/layout/activity_preview_image.xml
@@ -44,33 +44,22 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_horizontal"
-                android:weightSum="2"
                 android:layout_weight="2"
                 android:layout_margin="15dp">
 
                 <Button
-                    android:id="@+id/yesButton"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="5dp"
-                    android:text="Yes"
-                    android:background="@color/wavePrimary"
-                    android:textColor="@color/waveTextWh"
-                    android:textStyle="bold"
-                    android:textSize="17sp"/>
+                    android:id="@+id/noButton"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginEnd="75dp"
+                    android:background="@drawable/x_button"/>
 
                 <Button
-                    android:id="@+id/noButton"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="5dp"
-                    android:text="No"
-                    android:background="@color/wavePrimary"
-                    android:textColor="@color/waveTextWh"
-                    android:textStyle="bold"
-                    android:textSize="17sp"/>
+                    android:id="@+id/yesButton"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginStart="75dp"
+                    android:background="@drawable/check_button"/>
 
             </LinearLayout>
         </LinearLayout>
