--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
     <color name="black_overlay">#66000000</color>
+    <color name="green_overlay">#A4C639</color>
+    <color name="red_overlay">#ff0000</color>
+    <color name="blue_overlay">#1976D2</color>
+    <color name="orange_overlay">#FFA500</color>
 
     <color name="wavePrimary">#2196F3</color>
     <color name="wavePrimaryLt">#BBDEFB</color>
