--- a/app/src/main/res/drawable/theme_button.xml
+++ b/app/src/main/res/drawable/theme_button.xml
@@ -3,18 +3,15 @@
     <item
         android:state_checked="true">
         <shape android:shape="rectangle">
-            <stroke android:color="@color/blue_overlay" android:width="5dp" />
+            <stroke android:color="@color/wavePrimaryDk" android:width="5dp" />
             <solid android:color="@color/white" />
-            <size android:width="170dp" android:height="170dp" />
             <corners android:radius="10dp" />
         </shape>
     </item>
     <item
         android:state_checked="false">
         <shape android:shape="rectangle">
-            <stroke android:color="@color/white" android:width="5dp" />
             <solid android:color="@color/white" />
-            <size android:width="170dp" android:height="170dp" />
             <corners android:radius="10dp" />
         </shape>
     </item>
