--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -23,9 +23,18 @@
         android:id="@+id/btn_upload_image"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_gravity="right|top"
+        android:layout_gravity="end|top"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/upload_button" />
+
+    <Button
+        android:id="@+id/btn_settings_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="start|top"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/settings_button" />
 
 </FrameLayout>
