--- a/app/src/main/res/drawable/theme_button.xml
+++ b/app/src/main/res/drawable/theme_button.xml
@@ -3,7 +3,7 @@
     <item
         android:state_checked="true">
         <shape android:shape="rectangle">
-            <stroke android:color="@color/wavePrimaryDk" android:width="5dp" />
+            <stroke android:color="@color/black_overlay" android:width="3dp" />
             <solid android:color="@color/white" />
             <corners android:radius="10dp" />
         </shape>
