--- a/app/src/main/res/layout/button_theme_selector.xml
+++ b/app/src/main/res/layout/button_theme_selector.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
     <RadioButton
         android:id="@+id/theme_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:button="@android:color/transparent"
+        android:layout_height="match_parent"
+        android:button="@null"
         android:background="@drawable/theme_button"
-        android:gravity="center_horizontal"
-        android:layout_alignParentTop="true">
-    </RadioButton>
-    <TextView
-        android:id="@+id/theme_text"
-        android:layout_below="@+id/theme_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
+        android:padding="15dp"
+        android:gravity="center|bottom"
         android:textSize="16sp"
         android:textAllCaps="true"
-        android:textStyle="bold"/>
+        android:textStyle="bold">
+    </RadioButton>
 </RelativeLayout>
