--- a/app/src/main/res/drawable/undo_button.xml
+++ b/app/src/main/res/drawable/undo_button.xml
@@ -2,6 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
+            <stroke android:color="@color/white" android:width="3dp" />
             <solid android:color="@color/blue_overlay" />
             <size android:width="100dp" android:height="100dp" />
         </shape>
