--- a/app/src/main/res/layout/activity_select_theme.xml
+++ b/app/src/main/res/layout/activity_select_theme.xml
@@ -28,6 +28,7 @@
             android:id="@+id/processButton"
             android:layout_width="match_parent"
             android:layout_height="75dp"
+            android:textColor="@color/black"
             android:text="process"
             android:layout_alignParentBottom="true"
             />
