--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/one"
-        android:title="One" />
+        android:id="@+id/help"
+        android:title="Help">
+    </item>
     <item
-        android:id="@+id/two"
-        android:title="Two"/>
-    <item
-        android:id="@+id/three"
-        android:title="Three"/>
+        android:id="@+id/about"
+        android:title="About"/>
 </menu>  
