--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,10 @@
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/background</item>
     </style>
+
+    <style name="MenuTheme" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:colorBackground">@null</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/rounded_menu</item>
+    </style>
 </resources>
