--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,13 @@
     <style name="MenuTheme" parent="Widget.AppCompat.PopupMenu">
         <item name="android:colorBackground">@null</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHighlight">@null</item>
         <item name="android:background">@drawable/rounded_menu</item>
+    </style>
+
+    <style name="DialogTheme" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="android:colorBackground">@color/black</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="colorAccent">@color/white</item>
     </style>
 </resources>
