--- a/app/src/main/res/layout/activity_display_image.xml
+++ b/app/src/main/res/layout/activity_display_image.xml
@@ -7,25 +7,27 @@
     tools:context=".DisplayImageActivity"
     android:background="@color/white">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="12">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/processedImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="11"
+            android:adjustViewBounds="true"
+            android:layout_centerInParent="true"
             android:layout_margin="15dp"
-            app:srcCompat="@android:color/transparent" />
+            android:layout_alignParentTop="true"
+            android:layout_above="@id/disp_btn_container"/>
 
         <LinearLayout
+            android:id="@+id/disp_btn_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1"
+            android:layout_alignParentBottom="true"
             android:layout_gravity="center_horizontal">
 
             <LinearLayout
@@ -52,6 +54,6 @@
 
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
