--- a/app/src/main/res/layout/activity_preview_image.xml
+++ b/app/src/main/res/layout/activity_preview_image.xml
@@ -7,27 +7,29 @@
     android:background="@color/white"
     tools:context=".PreviewImageActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="12">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imagePreview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="11"
+            android:adjustViewBounds="true"
+            android:layout_centerInParent="true"
             android:layout_margin="15dp"
-            />
+            android:layout_alignParentTop="true"
+            android:layout_above="@id/prev_btn_container" />
 
         <LinearLayout
+            android:id="@+id/prev_btn_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="1"
             android:weightSum="5"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentBottom="true">
 
             <TextView
                 android:id="@+id/confirmImageText"
@@ -63,7 +65,7 @@
 
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
